--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,8 +6,8 @@ runnable=true
 advanced_options=false
 dedicated_server=false
 custom_features=""
-export_filter="scenes"
-export_files=PackedStringArray("res://Windows/first_time.tscn", "res://Windows/MainInterface.tscn", "res://Windows/mod_info.tscn", "res://Windows/missingmod.tscn", "res://root.tscn")
+export_filter="exclude"
+export_files=PackedStringArray("res://Windows/first_time.tscn", "res://Windows/MainInterface.tscn", "res://Windows/mod_info.tscn", "res://Windows/missingmod.tscn", "res://root.tscn", "res://addons/godot-git-plugin/git_plugin.gdextension")
 include_filter=""
 exclude_filter=""
 export_path="../DK2ModManager/Linux/DK2ModManager.x86_64"
@@ -50,8 +50,8 @@ runnable=true
 advanced_options=false
 dedicated_server=false
 custom_features=""
-export_filter="scenes"
-export_files=PackedStringArray("res://Windows/first_time.tscn", "res://Windows/MainInterface.tscn", "res://Windows/mod_info.tscn", "res://Windows/missingmod.tscn", "res://root.tscn")
+export_filter="exclude"
+export_files=PackedStringArray("res://addons/godot-git-plugin/git_plugin.gdextension")
 include_filter=""
 exclude_filter=""
 export_path="../DK2ModManager/Windows/DK2ModlistManager.exe"
