--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -2,15 +2,15 @@
 
 name="Linux"
 platform="Linux"
-runnable=true
+runnable=false
 advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="exclude"
-export_files=PackedStringArray("res://Windows/first_time.tscn", "res://Windows/MainInterface.tscn", "res://Windows/mod_info.tscn", "res://Windows/missingmod.tscn", "res://root.tscn", "res://addons/godot-git-plugin/git_plugin.gdextension")
+export_files=PackedStringArray("res://getSteamInstallDir.cs")
 include_filter=""
 exclude_filter=""
-export_path="../DK2ModManager/Linux/DK2ModManager.x86_64"
+export_path="../../DK2Output/Linux/DK2ModManager.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -41,20 +41,22 @@ unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=false
+dotnet/embed_build_outputs=false
 
 [preset.1]
 
 name="Windows Desktop"
 platform="Windows Desktop"
-runnable=true
-advanced_options=false
+runnable=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
-export_filter="exclude"
-export_files=PackedStringArray("res://addons/godot-git-plugin/git_plugin.gdextension")
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../DK2ModManager/Windows/DK2ModlistManager.exe"
+export_path="../../DK2Output/Windows/DK2ModlistManager.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -110,3 +112,6 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=false
+dotnet/embed_build_outputs=true
