--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -10,7 +10,7 @@ export_filter="exclude"
 export_files=PackedStringArray("res://getSteamInstallDir.cs")
 include_filter=""
 exclude_filter=""
-export_path="../../DK2Output/Linux/DK2ModManager.x86_64"
+export_path="../DK2ModManager/Linux/DK2ModManager.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -41,8 +41,8 @@ unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
-dotnet/include_scripts_content=false
-dotnet/include_debug_symbols=false
+dotnet/include_scripts_content=true
+dotnet/include_debug_symbols=true
 dotnet/embed_build_outputs=false
 
 [preset.1]
