--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="exclude"
-export_files=PackedStringArray("res://getSteamInstallDir.cs")
+export_files=PackedStringArray()
 include_filter=""
 exclude_filter=""
 export_path="../DK2ModManager/Linux/DK2ModManager.x86_64"
